[package]
name = "multidocker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
color-eyre = "0.6"
log = "0.4"
pretty_env_logger = "0.4"
axum = { git = "https://github.com/tokio-rs/axum" }
chrono = "0.4.24"
reqwest = { version = "0.11.17", features = ["serde_json", "json"] }
futures = "0.3.28"
